--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /.idea
 
 # dependencies
-/node_modules
+node_modules/
 .expo/
 dist/
 npm-debug.*
@@ -40,3 +40,5 @@ web-build/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+package-lock.json
