--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "memorygame",
-    "slug": "memorygame",
+    "name": "MemoryGame",
+    "slug": "MemoryGame",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
